fixed mobile overflow in storyline

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ body {
   box-shadow: 1px 1px 7px 7px #f5f5f5;
   padding: 30px 0;
   max-width: 900px;
+  overflow-x: hidden;
 }
 
 .resume__block {
